replaced filter with overlay (solves flicker)

--- a/src/app/components/unit-details-dialog/tabs/unit-details-general-tab.component.css
+++ b/src/app/components/unit-details-dialog/tabs/unit-details-general-tab.component.css
@@ -290,10 +290,6 @@
     gap: 2px;
 }
 
-.comp-list .comp-single {
-    display: contents !important;
-}
-
 /* Cargo */
 .cargo-container {
     display: flex;
